--- a/frontend/angularSPA/src/index.html
+++ b/frontend/angularSPA/src/index.html
@@ -19,7 +19,7 @@
       <div class="blob blob-3"></div>
       <div class="blob blob-4"></div>
       <div class="blob blob-5"></div>
-      <h1 class="display-4">Web Application Loading...</h1>
+      <h1 class="display-2 text-white">Web Application Loading...</h1>
     </div>
 
 </body>
