--- a/frontend/SPA/src/index.html
+++ b/frontend/SPA/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Eva Icons -->
-  <script src="../node_modules/eva-icons/eva.js"></script>
+  <!--<script src="../node_modules/eva-icons/eva.js"></script>-->
+  <script src="https://unpkg.com/eva-icons"></script>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
